--- a/index.html
+++ b/index.html
@@ -2,6 +2,114 @@
 <html lang="es">
 
 <head>
+    <style>
+        .back {
+
+            position: fixed;
+            padding: 0;
+            margin: 0;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: white;
+            animation-name: backdiv;
+            animation-duration: 3500ms;
+            animation-iteration-count: infinite;
+            height: 100vh;
+        }
+
+        .heart {
+            position: absolute;
+            margin: auto;
+            top: 170px;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            background-color: rgb(255, 0, 0);
+            height: 150px;
+            width: 150px;
+            transform: rotate(-45deg);
+            animation-name: beat;
+            animation-duration: 3500ms;
+            animation-iteration-count: infinite;
+        }
+
+        .heart:after {
+            background-color: rgb(255, 0, 0);
+            content: "";
+            border-radius: 50%;
+            position: absolute;
+            width: 150px;
+            height: 150px;
+            top: 0;
+            left: 80px;
+        }
+
+        .heart:before {
+            background-color: rgb(255, 0, 0);
+            content: "";
+            border-radius: 50%;
+            position: absolute;
+            width: 150px;
+            height: 150px;
+            top: -80px;
+            left: 0;
+        }
+
+        @keyframes backdiv {
+            50% {
+                background: #b20000fd;
+            }
+        }
+
+        @keyframes beat {
+            0% {
+                transform: scale(1) rotate(-45deg);
+            }
+
+            50% {
+                transform: scale(0.6) rotate(-45deg);
+            }
+        }
+
+        .bday {
+            text-align: center;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+            font-size: 15px;
+            font-family: 'Nunito', sans-serif;
+            font-weight: 600;
+            color: #ffffff;
+            margin: 20px auto;
+            padding: 15px;
+            background-color: #b20000fd;
+        }
+
+        button {
+            background-color: #b20000fd;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+            display: block;
+            margin: 20px auto;
+            padding: 10px 20px;
+            color: white;
+            border: none;
+            margin-top: 70vh;
+
+        }
+
+        a {
+            color: rgb(255, 255, 255);
+            font-weight: 20px;
+            text-decoration: none;
+        }
+
+        .elements {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+        }
+    </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,20 +119,23 @@
 </head>
 
 <body>
-    <div class="greetings">
-        <span>H</span>
-        <span>o</span>
-        <span>l</span>
-        <span>a</span>
-        <span>!</span>
-    </div>
-    <div class="description">
-        <span>ESTE DETALLE ES PARA TI :)</span>
-    </div>
-    <div class="button">
-        <button class="botones">
-            <a href="flower.html" style="color: #fff;">CLICK AQUÍ</a>
-        </button>
+    <div class="back">
+        <div class="bday">
+            ¿Cómo estás mi amor? 💛<br>
+            Te mando esta flor amarilla para recordarte lo increíble y especial que eres en mi vida.<br>
+            Deseo que tu corazón hoy esté lleno de calma y alegría, y que tus sueños estén cargados de cosas hermosas.
+            🌙✨<br>
+        </div>
+
+        <div class="elements">
+            <div class="heart"></div>
+            <footer>
+                <div class="boton">
+                    <button><a href="flower.html"><span>Has click aquí</span></a></button>
+                </div>
+            </footer>
+        </div>
+
     </div>
 
 </body>
